--- a/Dashboard/DashboardPage.xaml
+++ b/Dashboard/DashboardPage.xaml
@@ -9,16 +9,11 @@
       Title="DashboardPage">
 
     <Grid>
-        <Label x:Name="waitingLabel" Content="Waiting on Approval" HorizontalAlignment="Left" Margin="210,50,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="reserveLabel" Content="On Reservation" HorizontalAlignment="Left" Margin="361,50,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="returnLabel" Content="Returned" HorizontalAlignment="Left" Margin="503,50,0,0" VerticalAlignment="Top"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="210,81,0,0" Stroke="Black" VerticalAlignment="Top" Width="118"/>
-        <Label x:Name="waitingCountLabel" Content="Label" HorizontalAlignment="Left" Margin="249,116,0,0" VerticalAlignment="Top"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="361,81,0,0" Stroke="Black" VerticalAlignment="Top" Width="91"/>
-        <Label x:Name="reserveCountLabel" Content="Label" HorizontalAlignment="Left" Margin="388,116,0,0" VerticalAlignment="Top"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="503,81,0,0" Stroke="Black" VerticalAlignment="Top" Width="100"/>
-        <Label x:Name="returnCountLabel" Content="Label" HorizontalAlignment="Left" Margin="535,116,0,0" VerticalAlignment="Top"/>
         <TextBlock x:Name="logout_txtBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Logout" VerticalAlignment="Top" Margin="752,10,0,0"/>
+        <Frame x:Name="dashboardFrame" Content="Frame" HorizontalAlignment="Left" Height="405" Margin="0,45,0,-0.4" VerticalAlignment="Top" Width="800" />
+        <TextBlock x:Name="home_txtBlock" HorizontalAlignment="Left" Margin="224,10,0,0" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top"/>
+        <TextBlock x:Name="asset_txtBlock" HorizontalAlignment="Left" Margin="317,10,0,0" TextWrapping="Wrap" Text="Asset" VerticalAlignment="Top"/>
+        <TextBlock x:Name="reservation_txtBlock" HorizontalAlignment="Left" Margin="392,10,0,0" TextWrapping="Wrap" Text="Reservation" VerticalAlignment="Top"/>
 
     </Grid>
 </basic:MyPage>
