--- a/Home/HomePage.xaml
+++ b/Home/HomePage.xaml
@@ -9,7 +9,25 @@
       Title="HomePage">
 
     <Grid>
-        <Label Content="Home" HorizontalAlignment="Left" Margin="411,191,0,0" VerticalAlignment="Top"/>
+        <Label Content="Waiting on Approval" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top"/>
+        <Label Content="On Reservation" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="321,10,0,0"/>
+        <Label Content="Returned" HorizontalAlignment="Left" Margin="562,10,0,0" VerticalAlignment="Top"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="90,41,0,0" Stroke="Black" VerticalAlignment="Top" Width="118"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="321,41,0,0" Stroke="Black" VerticalAlignment="Top" Width="118"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="100" Margin="562,41,0,0" Stroke="Black" VerticalAlignment="Top" Width="118"/>
+        <Label x:Name="waiting_txtCount" Content="0" HorizontalAlignment="Left" Margin="139,74,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="reserve_txtCount" Content="0" HorizontalAlignment="Left" Margin="374,74,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="return_txtCount" Content="0" HorizontalAlignment="Left" Margin="615,74,0,0" VerticalAlignment="Top"/>
+        <ListView x:Name="recent_reservation_Lv" HorizontalAlignment="Left" Height="226" Margin="90,201,0,0" VerticalAlignment="Top" Width="590">
+            <ListView.View>
+                <GridView x:Name="recent_reservation_Gv">
+                    <GridViewColumn Header="Date" DisplayMemberBinding="{Binding Date_begin}"/>
+                    <GridViewColumn Header="Reservee" DisplayMemberBinding="{Binding User.Full_name}"/>
+                    <GridViewColumn Header="Item Reserved" DisplayMemberBinding="{Binding Asset.Name}"/>
+                    <GridViewColumn Header="Status" DisplayMemberBinding="{Binding Status}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
 
     </Grid>
 </basic:MyPage>
