--- a/Reservation/ReservationPage.xaml
+++ b/Reservation/ReservationPage.xaml
@@ -1,5 +1,8 @@
-﻿<basic:MyPage  xmlns:basic="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro" x:Class="CLARA_Desktop.Reservation.ReservationPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+
+﻿<basic:MyPage
+    x:Class="CLARA_Desktop.Reservation.ReservationPage"
+    xmlns:basic="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
@@ -9,7 +12,7 @@
       Title="ReservationPage">
 
     <Grid>
-        <Label Content="Reservation" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="390,200,0,0"/>
+        <DataGrid Name="reservationsGrid" Margin="24,72,36,24"></DataGrid>
 
     </Grid>
 </basic:MyPage>
