--- a/Reservation/ReservationPage.xaml
+++ b/Reservation/ReservationPage.xaml
@@ -1,8 +1,5 @@
-
-﻿<basic:MyPage
-    x:Class="CLARA_Desktop.Reservation.ReservationPage"
-    xmlns:basic="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+<basic:MyPage  xmlns:basic="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro" x:Class="CLARA_Desktop.Reservation.ReservationPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
@@ -12,7 +9,8 @@
       Title="ReservationPage">
 
     <Grid>
-        <DataGrid Name="reservationsGrid" Margin="24,72,36,24"></DataGrid>
-
+        <DataGrid Name="reservationsGrid" Margin="24,72,36,108.6" IsReadOnly="True" MouseDoubleClick="reservationsGrid_MouseDoubleClick"></DataGrid>
+        <Button x:Name="next_page_button" Content="Next" HorizontalAlignment="Left" Margin="674,363,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="previous_page_button" Content="Previous" HorizontalAlignment="Left" Margin="581,363,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </basic:MyPage>
