--- a/Reservation/ReservationDetailPage.xaml
+++ b/Reservation/ReservationDetailPage.xaml
@@ -5,7 +5,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CLARA_Desktop.ReservationDetail"
+      xmlns:local="clr-namespace:CLARA_Desktop.Reservation"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ReservationDetailPage">
@@ -19,8 +19,8 @@
         <TextBlock Name="assetName" Text="asset name" HorizontalAlignment="Left" Margin="257,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" Width="110"/>
         <DataGrid Name="statusGrid" Margin="109,270,157,57" IsReadOnly="True" />
         <Image Name="imageAsset" HorizontalAlignment="Left" Height="186" Margin="10,10,0,0" VerticalAlignment="Top" Width="205" Source="no-image.png" Stretch="Fill"/>
-        <Button Content="Accept" HorizontalAlignment="Left" Margin="568,246,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Deny" HorizontalAlignment="Left" Margin="469,246,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="accept_button" Content="Accept" HorizontalAlignment="Left" Margin="568,246,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="deny_button" Content="Deny" HorizontalAlignment="Left" Margin="469,246,0,0" VerticalAlignment="Top" Width="75"/>
 
 
 
