--- a/Dashboard/DashboardPage.xaml
+++ b/Dashboard/DashboardPage.xaml
@@ -13,8 +13,8 @@
         <Grid.Background>
             <ImageBrush ImageSource="[Re] D W  Dashboard – 1.png"/>
         </Grid.Background>
-        <Frame x:Name="dashboardFrame" Content="" HorizontalAlignment="Left" Height="336" Margin="10,45,0,0" VerticalAlignment="Top" Width="780" Navigated="dashboardFrame_Navigated_1" Background="White" />
-        <TextBlock x:Name="home_txtBlock" HorizontalAlignment="Left" Margin="145,10,0,0" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" Foreground="#FF000050" FontWeight="Bold"/>
+        <Frame x:Name="dashboardFrame" Content="Frame" HorizontalAlignment="Left" Height="336" Margin="10,45,0,0" VerticalAlignment="Top" Width="780" Navigated="dashboardFrame_Navigated_1" Background="White" />
+        <TextBlock x:Name="home_txtBlock" HorizontalAlignment="Left" Margin="145,10,0,0" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" Foreground="#FF000050"/>
         <TextBlock x:Name="asset_txtBlock" HorizontalAlignment="Left" Margin="220,10,0,0" TextWrapping="Wrap" Text="Asset" VerticalAlignment="Top" Foreground="#FF000050"/>
         <TextBlock x:Name="reservation_txtBlock" HorizontalAlignment="Left" Margin="295,10,0,0" TextWrapping="Wrap" Text="Reservation" VerticalAlignment="Top" Foreground="#FF000050"/>
         <TextBlock x:Name="logout_txtBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Logout" VerticalAlignment="Top" Margin="725,10,0,0" Foreground="#FF000050"/>
@@ -24,42 +24,7 @@
                 <ImageSource>line.png</ImageSource>
             </Image.Source>
         </Image>
-        <Image x:Name="footer" Margin="45,399,669,10" RenderTransformOrigin="0.826,0.549">
-            <Image.Source>
-                <ImageSource>clara_logo_2.png</ImageSource>
-            </Image.Source>
-        </Image>
-        <TextBlock x:Name="home_txtBlock_Copy" HorizontalAlignment="Left" Margin="45,45,0,0" TextWrapping="Wrap" Text="Hello, Ilyas!" VerticalAlignment="Top" Foreground="#FF000050" FontWeight="Bold" FontSize="36"/>
-        <TextBlock x:Name="reservation_txtBlock_Copy" HorizontalAlignment="Left" Margin="45,93,0,0" TextWrapping="Wrap" Text="Here are the reservation data recap for this month." VerticalAlignment="Top" Foreground="#FF000050" Width="377" FontSize="16"/>
-        <TextBlock x:Name="reservation_txtBlock_Copy1" HorizontalAlignment="Left" Margin="45,200,0,0" TextWrapping="Wrap" Text="Recent reservations" VerticalAlignment="Top" Foreground="#FF000050" Width="377" FontSize="16"/>
-        <TextBlock x:Name="home_txtBlock_Copy1" HorizontalAlignment="Left" Margin="190,399,0,0" TextWrapping="Wrap" Text="About Us" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
-        <TextBlock x:Name="home_txtBlock_Copy2" HorizontalAlignment="Left" Margin="190,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontSize="6" Width="150"><Run Text="Clara is a platform to connect college"/><LineBreak/><Run Text="students and college administrative staff "/><LineBreak/><Run Text="on reservation request"/></TextBlock>
-        <TextBlock x:Name="home_txtBlock_Copy3" HorizontalAlignment="Left" Margin="383,399,0,0" TextWrapping="Wrap" Text="Contact Us" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
-        <TextBlock x:Name="home_txtBlock_Copy4" HorizontalAlignment="Left" Margin="383,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontSize="6" Width="150"><Span Foreground="White" FontFamily="Open Sans"><Run Text="You can just contact Ilyas, Fajar, Indra, Tiara, Gebby or Ubai if this platform has bugs that annoy you so much that you have to contact them."/></Span></TextBlock>
-        <DataGrid HorizontalAlignment="Left" Height="67" Margin="45,119,0,0" VerticalAlignment="Top" Width="172" SelectionChanged="DataGrid_SelectionChanged" Foreground="#FF000050">
-            <DataGrid.Columns>
-                <materialDesign:DataGridTextColumn Header="Waiting for Approval" Foreground="#FF000050"/>
-            </DataGrid.Columns>
-        </DataGrid>
-        <DataGrid HorizontalAlignment="Left" Height="67" Margin="228,119,0,0" VerticalAlignment="Top" Width="172" SelectionChanged="DataGrid_SelectionChanged" Foreground="Gray">
-            <DataGrid.Columns>
-                <materialDesign:DataGridTextColumn Header="On Reservation"/>
-            </DataGrid.Columns>
-        </DataGrid>
-        <DataGrid HorizontalAlignment="Left" Height="67" Margin="411,119,0,0" VerticalAlignment="Top" Width="172" SelectionChanged="DataGrid_SelectionChanged" Foreground="#FF000050">
-            <DataGrid.Columns>
-                <materialDesign:DataGridTextColumn Header="Returned"/>
-            </DataGrid.Columns>
-        </DataGrid>
-        <DataGrid Name="recent_reservations" HorizontalAlignment="Left" Height="155" Margin="45,226,0,0" VerticalAlignment="Top" Width="538" SelectionChanged="DataGrid_SelectionChanged">
-            <DataGrid.Columns>
-                <materialDesign:DataGridTextColumn Header="No" Binding="{Binding No}"/>
-                <materialDesign:DataGridTextColumn Header="Date" Binding="{Binding Date}"/>
-                <materialDesign:DataGridTextColumn Header="Reservee" Binding="{Binding Reservee}"/>
-                <materialDesign:DataGridTextColumn Header="Item Reserved" Binding="{Binding ItemReserved}"/>
-                <materialDesign:DataGridTextColumn Header="Status" Binding="{Binding Status}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-        
+
+
     </Grid>
 </basic:MyPage>
