--- a/Dashboard/DashboardPage.xaml
+++ b/Dashboard/DashboardPage.xaml
@@ -1,10 +1,9 @@
-﻿<basic:MyPage  xmlns:basic="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro"
+﻿<basic:MyPage  xmlns:basic="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro" x:Class="CLARA_Desktop.Dashboard.DashboardPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CLARA_Desktop.Dashboard"
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="CLARA_Desktop.Dashboard.DashboardPage"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="DashboardPage">
@@ -13,18 +12,16 @@
         <Grid.Background>
             <ImageBrush ImageSource="[Re] D W  Dashboard – 1.png"/>
         </Grid.Background>
-        <Frame x:Name="dashboardFrame" Content="Frame" HorizontalAlignment="Left" Height="336" Margin="10,45,0,0" VerticalAlignment="Top" Width="780" Navigated="dashboardFrame_Navigated_1" Background="White" />
-        <TextBlock x:Name="home_txtBlock" HorizontalAlignment="Left" Margin="145,10,0,0" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" Foreground="#FF000050"/>
-        <TextBlock x:Name="asset_txtBlock" HorizontalAlignment="Left" Margin="220,10,0,0" TextWrapping="Wrap" Text="Asset" VerticalAlignment="Top" Foreground="#FF000050"/>
-        <TextBlock x:Name="reservation_txtBlock" HorizontalAlignment="Left" Margin="295,10,0,0" TextWrapping="Wrap" Text="Reservation" VerticalAlignment="Top" Foreground="#FF000050"/>
-        <TextBlock x:Name="logout_txtBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Logout" VerticalAlignment="Top" Margin="725,10,0,0" Foreground="#FF000050"/>
-        <Image x:Name="clara_logo" Margin="10,5,704,422" Source="clara_logo_1.png"/>
-        <Image x:Name="line" Margin="105,5,665,422">
+        <Frame x:Name="dashboardFrame" Content="Frame" HorizontalAlignment="Left" Height="405" Margin="0,45,0,-0.4" VerticalAlignment="Top" Width="800" />
+        <TextBlock x:Name="home_txtBlock" HorizontalAlignment="Left" Margin="224,10,0,0" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" Foreground="#FF000050"/>
+        <TextBlock x:Name="asset_txtBlock" HorizontalAlignment="Left" Margin="317,10,0,0" TextWrapping="Wrap" Text="Asset" VerticalAlignment="Top" Foreground="#FF000050"/>
+        <TextBlock x:Name="reservation_txtBlock" HorizontalAlignment="Left" Margin="392,10,0,0" TextWrapping="Wrap" Text="Reservation" VerticalAlignment="Top" Foreground="#FF000050"/>
+        <TextBlock x:Name="logout_txtBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Logout" VerticalAlignment="Top" Margin="740,10,0,0" Foreground="#FF000050"/>
+        <Image x:Name="clara_logo" Margin="37,5,677,422" Source="clara_logo_1.png"/>
+        <Image x:Name="line" Margin="144,5,626,422">
             <Image.Source>
                 <ImageSource>line.png</ImageSource>
             </Image.Source>
         </Image>
-
-
     </Grid>
 </basic:MyPage>
