--- a/Reservation/ReservationDetailPage.xaml
+++ b/Reservation/ReservationDetailPage.xaml
@@ -11,6 +11,9 @@
       Title="ReservationDetailPage">
 
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="Background Reservation.png"/>
+        </Grid.Background>
         <TextBlock Name="begin"  Text="begin" HorizontalAlignment="Left" Margin="257,116,0,0" VerticalAlignment="Top" Height="52" Width="94"/>
         <TextBlock Name="end" Text="end" HorizontalAlignment="Left" Margin="257,183,0,0" VerticalAlignment="Top"/>
         <TextBlock Name="reservee" Text="reservee" HorizontalAlignment="Left" Height="36" Margin="423,86,0,0" VerticalAlignment="Top" Width="349"/>
