--- a/Reservation/ReservationPage.xaml
+++ b/Reservation/ReservationPage.xaml
@@ -1,16 +1,36 @@
-<basic:MyPage  xmlns:basic="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro" x:Class="CLARA_Desktop.Reservation.ReservationPage"
+<basic:MyPage  xmlns:basic="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CLARA_Desktop.Reservation"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="CLARA_Desktop.Reservation.ReservationPage"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ReservationPage">
 
     <Grid>
-        <DataGrid Name="reservationsGrid" Margin="24,72,36,108.6" IsReadOnly="True" MouseDoubleClick="reservationsGrid_MouseDoubleClick"></DataGrid>
-        <Button x:Name="next_page_button" Content="Next" HorizontalAlignment="Left" Margin="674,363,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="previous_page_button" Content="Previous" HorizontalAlignment="Left" Margin="581,363,0,0" VerticalAlignment="Top" Width="75"/>
+        <Grid.Background>
+            <ImageBrush ImageSource="Background Reservation.png"/>
+        </Grid.Background>
+        <TextBlock x:Name="heading2" HorizontalAlignment="Left" Margin="24,32,0,0" TextWrapping="Wrap" Text="Reservation" VerticalAlignment="Top" Foreground="#FF000050" Width="377" FontSize="14"/>
+        <TextBox x:Name="search_txtBox" HorizontalAlignment="Left" Height="23" Margin="516,28,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="153"/>
+        <Button x:Name="search_button" Content="Search" HorizontalAlignment="Left" Margin="689,19,0,0" VerticalAlignment="Top" Width="75" Background="#FF000050" BorderBrush="#FF000050"/>
+        <DataGrid x:Name="reservationsGrid" Margin="24,60,36,121" IsReadOnly="True" MouseDoubleClick="reservationsGrid_MouseDoubleClick">
+            <DataGrid.Columns>
+                <materialDesign:DataGridTextColumn Header="No"/>
+                <materialDesign:DataGridTextColumn Header="Date"/>
+                <materialDesign:DataGridTextColumn Header="Reservee"/>
+                <materialDesign:DataGridTextColumn Header="Item Reserved"/>
+                <materialDesign:DataGridTextColumn Header="Status"/>    
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button x:Name="next_page_button" Content="Next" HorizontalAlignment="Left" Margin="689,342,0,0" VerticalAlignment="Top" Width="75" BorderBrush="#FF000050" Background="#FF000050"/>
+        <Button x:Name="previous_page_button" Content="Previous" HorizontalAlignment="Left" Margin="594,342,0,0" VerticalAlignment="Top" Width="75" Background="#FF000050" BorderBrush="#FF000050"/>
+        <Image x:Name="footer" Margin="44,399,670,10" RenderTransformOrigin="0.826,0.549" Source="clara_logo_2.png"/>
+        <TextBlock x:Name="footer1" HorizontalAlignment="Left" Margin="190,399,0,0" TextWrapping="Wrap" Text="About Us" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
+        <TextBlock x:Name="footer2" HorizontalAlignment="Left" Margin="190,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontSize="6" Width="150"><Run Text="Clara is a platform to connect college"/><LineBreak/><Run Text="students and college administrative staff "/><LineBreak/><Run Text="on reservation request"/></TextBlock>
+        <TextBlock x:Name="footer3" HorizontalAlignment="Left" Margin="383,399,0,0" TextWrapping="Wrap" Text="Contact Us" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
+        <TextBlock x:Name="footer4" HorizontalAlignment="Left" Margin="383,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontSize="6" Width="150"><Span Foreground="White" FontFamily="Open Sans"><Run Text="You can just contact Ilyas, Fajar, Indra, Tiara, Gebby or Ubai if this platform has bugs that annoy you so much that you have to contact them."/></Span></TextBlock>
     </Grid>
 </basic:MyPage>
