--- a/Reservation/ReservationDetailPage.xaml
+++ b/Reservation/ReservationDetailPage.xaml
@@ -8,7 +8,8 @@
       xmlns:local="clr-namespace:CLARA_Desktop.Reservation"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ReservationDetailPage">
+      Title="ReservationDetailPage"
+      FontFamily="{StaticResource OpenSans}">
 
     <Grid>
         <Grid.Background>
