--- a/Asset/AssetDetailPage.xaml
+++ b/Asset/AssetDetailPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CLARA_Desktop.Asset"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="720" d:DesignWidth="1280"
       Title="AssetDetailPage"
       FontFamily="{StaticResource OpenSans}">
 
@@ -13,18 +13,13 @@
         <Grid.Background>
             <ImageBrush ImageSource="[Re] D W  Dashboard – 2.png"/>
         </Grid.Background>
-        <TextBox x:Name="name_txtBox" HorizontalAlignment="Left" Height="24" Margin="466,132,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="186" Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" FontWeight="Bold"/>
-        <TextBlock Text="Name" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="352,130,0,0" FontWeight="Bold" FontSize="16" Foreground="#707070"/>
-        <Image x:Name="asset_image" HorizontalAlignment="Left" Height="172" Margin="140,110,0,0" VerticalAlignment="Top" Width="182" Stretch="Fill" Source="no-image.png"/>
-        <Button x:Name="update_button" Content="Update" HorizontalAlignment="Left" Margin="569,250,0,0" VerticalAlignment="Top" Width="84" Background="#FF000050" FontWeight="SemiBold" BorderBrush="#FF000050"/>
-        <Button x:Name="delete_button" Content="Delete" HorizontalAlignment="Left" Margin="466,250,0,0" VerticalAlignment="Top" Width="84" Background="#707070" FontWeight="SemiBold" BorderBrush="#FF707070"/>
-        <TextBlock Text="Quantity" HorizontalAlignment="Left" Margin="352,186,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" Foreground="#707070"/>
-        <TextBox x:Name="quantity_txtBox" HorizontalAlignment="Left" Height="24" Margin="577,186,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75" Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" FontWeight="Bold"/>
-        <Button x:Name="upload_button" Content="Upload" HorizontalAlignment="Left" Margin="190,306,0,0" VerticalAlignment="Top" Width="84" Background="#FF000050" FontWeight="SemiBold" BorderBrush="#FF000050"/>
-        <Image x:Name="footer" Margin="44,399,670,10" RenderTransformOrigin="0.826,0.549" Source="clara_logo_2.png"/>
-        <TextBlock x:Name="footer1" HorizontalAlignment="Left" Margin="190,399,0,0" TextWrapping="Wrap" Text="About Us" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
-        <TextBlock x:Name="footer2" HorizontalAlignment="Left" Margin="190,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontSize="6" Width="150"><Run Text="Clara is a platform to connect college"/><LineBreak/><Run Text="students and college administrative staff "/><LineBreak/><Run Text="on reservation request"/></TextBlock>
-        <TextBlock x:Name="footer3" HorizontalAlignment="Left" Margin="383,399,0,0" TextWrapping="Wrap" Text="Contact Us" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
-        <TextBlock x:Name="footer4" HorizontalAlignment="Left" Margin="383,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontSize="6" Width="150"><Span Foreground="White"><Run Text="You can just contact Ilyas, Fajar, Indra, Tiara, Gebby or Ubai if this platform has bugs that annoy you so much that you have to contact them."/></Span></TextBlock>
+        <TextBox x:Name="name_txtBox" HorizontalAlignment="Left" Height="40" Margin="862,215,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" FontWeight="Bold"/>
+        <TextBlock Text="Name" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="750,227,0,0" FontWeight="Bold" FontSize="20" Foreground="#707070"/>
+        <Image x:Name="asset_image" HorizontalAlignment="Left" Height="350" Margin="150,115,0,0" VerticalAlignment="Top" Width="350" Stretch="Fill" Source="no-image.png"/>
+        <Button x:Name="update_button" Content="Update" HorizontalAlignment="Left" Margin="1047,392,0,0" VerticalAlignment="Top" Width="100" Background="#FF000050" FontWeight="SemiBold" BorderBrush="#FF000050" Height="40" FontSize="18"/>
+        <Button x:Name="delete_button" Content="Delete" HorizontalAlignment="Left" Margin="910,392,0,0" VerticalAlignment="Top" Width="100" Background="#707070" FontWeight="SemiBold" BorderBrush="#FF707070" Height="40" FontSize="18"/>
+        <TextBlock Text="Quantity" HorizontalAlignment="Left" Margin="750,292,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Foreground="#707070"/>
+        <TextBox x:Name="quantity_txtBox" HorizontalAlignment="Left" Height="40" Margin="1069,282,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="78" Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" FontWeight="Bold"/>
+        <Button x:Name="upload_button" Content="Upload" HorizontalAlignment="Left" Margin="275,466,0,0" VerticalAlignment="Top" Width="100" Background="#FF000050" FontWeight="SemiBold" BorderBrush="#FF000050" Height="40" RenderTransformOrigin="0.516,0.167" FontSize="18"/>
     </Grid>
 </basic:MyPage>
