--- a/Dashboard/DashboardPage.xaml
+++ b/Dashboard/DashboardPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CLARA_Desktop.Dashboard"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="720" d:DesignWidth="1280"
       Title="DashboardPage"
       FontFamily="{StaticResource OpenSans}">
 
@@ -13,16 +13,16 @@
         <Grid.Background>
             <ImageBrush ImageSource="[Re] D W  Dashboard – 1.png"/>
         </Grid.Background>
-        <Frame x:Name="dashboardFrame" Content="Frame" HorizontalAlignment="Left" Height="405" Margin="0,45,0,-0.4" VerticalAlignment="Top" Width="800" />
-        <TextBlock x:Name="home_txtBlock" HorizontalAlignment="Left" Margin="224,10,0,0" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" Foreground="#FF000050"/>
-        <TextBlock x:Name="asset_txtBlock" HorizontalAlignment="Left" Margin="317,10,0,0" TextWrapping="Wrap" Text="Asset" VerticalAlignment="Top" Foreground="#FF000050"/>
-        <TextBlock x:Name="reservation_txtBlock" HorizontalAlignment="Left" Margin="392,10,0,0" TextWrapping="Wrap" Text="Reservation" VerticalAlignment="Top" Foreground="#FF000050"/>
-        <TextBlock x:Name="logout_txtBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Logout" VerticalAlignment="Top" Margin="740,10,0,0" Foreground="#FF000050"/>
-        <Image x:Name="line" Margin="144,5,626,422">
+        <Frame x:Name="dashboardFrame" Content="Frame" HorizontalAlignment="Left" Height="675" Margin="0,45,0,0" VerticalAlignment="Top" Width="1280" />
+        <TextBlock x:Name="home_txtBlock" HorizontalAlignment="Left" Margin="224,15,0,0" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" Foreground="#FF000050" FontSize="20"/>
+        <TextBlock x:Name="asset_txtBlock" HorizontalAlignment="Left" Margin="310,15,0,0" TextWrapping="Wrap" Text="Asset" VerticalAlignment="Top" Foreground="#FF000050" FontSize="20"/>
+        <TextBlock x:Name="reservation_txtBlock" HorizontalAlignment="Left" Margin="395,15,0,0" TextWrapping="Wrap" Text="Reservation" VerticalAlignment="Top" Foreground="#FF000050" FontSize="20"/>
+        <TextBlock x:Name="logout_txtBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Logout" VerticalAlignment="Top" Margin="1145,15,0,0" Foreground="#FF000050" FontSize="20"/>
+        <Image x:Name="line" Margin="144,5,1079,675">
             <Image.Source>
                 <ImageSource>line.png</ImageSource>
             </Image.Source>
         </Image>
-        <Image x:Name="clara_logo" Margin="37,5,677,422" Source="clara_logo_1.png"/>
+        <Image x:Name="clara_logo" Margin="40,10,1135,675" Source="clara_logo_1.png"/>
     </Grid>
 </basic:MyPage>
