--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CLARA_Desktop"
         mc:Ignorable="d"
-        Title="CLARA Desktop" Height="450" Width="800"
+        Title="CLARA Desktop" Height="720" Width="1280"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -16,7 +16,7 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}">
     <Grid>
-        <Frame x:Name="mainframe" Content="Frame" HorizontalAlignment="Left" Height="420" VerticalAlignment="Top" Width="794" Margin="0,0,-0.4,0" NavigationUIVisibility="Hidden"/>
+        <Frame x:Name="mainframe" Content="Frame" HorizontalAlignment="Left" Height="689" VerticalAlignment="Top" Width="1272" NavigationUIVisibility="Hidden"/>
 
     </Grid>
 </basic:MyWindow>
