--- a/Reservation/ReservationDetailPage.xaml
+++ b/Reservation/ReservationDetailPage.xaml
@@ -7,7 +7,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CLARA_Desktop.Reservation"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="720" d:DesignWidth="1280"
       Title="ReservationDetailPage"
       FontFamily="{StaticResource OpenSans}">
 
@@ -15,22 +15,17 @@
         <Grid.Background>
             <ImageBrush ImageSource="Background Reservation.png"/>
         </Grid.Background>
-        <TextBlock x:Name="heading2" HorizontalAlignment="Left" Margin="24,32,0,0" TextWrapping="Wrap" Text="Reservation Detail" VerticalAlignment="Top" Foreground="#FF000050" Width="377" FontSize="14"/>
-        <Image Name="imageAsset" HorizontalAlignment="Left" Height="186" Margin="24,73,0,0" VerticalAlignment="Top" Width="205" Source="no-image.png" Stretch="Fill"/>
-        <TextBlock Name="assetName" Text="Asset name" HorizontalAlignment="Left" Margin="257,51,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="110" FontWeight="Bold"/>
-        <TextBlock Name="reservee" Text="Reservee" HorizontalAlignment="Left" Height="24" Margin="257,86,0,0" VerticalAlignment="Top" Width="349" Foreground="#FF707070"/>
-        <TextBlock Name="classroom" Text="Class" HorizontalAlignment="Left" Height="18" Margin="257,110,0,0" VerticalAlignment="Top" Width="33" RenderTransformOrigin="-3.364,-0.333" Foreground="#FF707070"/>
-        <TextBlock x:Name="nrp" HorizontalAlignment="Left" Margin="257,133,0,0" VerticalAlignment="Top" Text="NRP" Foreground="#FF707070"/>
-        <TextBlock Name="begin"  Text="Begin Date" HorizontalAlignment="Left" Margin="257,169,0,0" VerticalAlignment="Top" Height="19" Width="94" Foreground="#FF707070"/>
-        <TextBlock Name="end" Text="Return Date" HorizontalAlignment="Left" Margin="257,193,0,0" VerticalAlignment="Top" Foreground="#FF707070"/>
-        <TextBlock x:Name="statusUpdate" Text="Status Update" HorizontalAlignment="Left" Margin="257,236,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="110" FontWeight="Bold"/>
-        <DataGrid Name="statusGrid" Margin="256,261,25,108" IsReadOnly="True" />
-        <Button x:Name="accept_button" Content="Finish" HorizontalAlignment="Left" Margin="700,347,0,0" VerticalAlignment="Top" Width="75" Background="#FF000050" BorderBrush="#FF000050"/>
-        <Button x:Name="deny_button" Content="Reject" HorizontalAlignment="Left" Margin="601,347,0,0" VerticalAlignment="Top" Width="75" BorderBrush="#FF707070" Background="#FF707070"/>
-        <Image x:Name="footer" Margin="44,399,670,10" RenderTransformOrigin="0.826,0.549" Source="clara_logo_2.png"/>
-        <TextBlock x:Name="footer1" HorizontalAlignment="Left" Margin="190,399,0,0" TextWrapping="Wrap" Text="About Us" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
-        <TextBlock x:Name="footer2" HorizontalAlignment="Left" Margin="190,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontSize="6" Width="150"><Run Text="Clara is a platform to connect college"/><LineBreak/><Run Text="students and college administrative staff "/><LineBreak/><Run Text="on reservation request"/></TextBlock>
-        <TextBlock x:Name="footer3" HorizontalAlignment="Left" Margin="383,399,0,0" TextWrapping="Wrap" Text="Contact Us" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
-        <TextBlock x:Name="footer4" HorizontalAlignment="Left" Margin="383,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontSize="6" Width="150"><Span Foreground="White" FontFamily="Open Sans"><Run Text="You can just contact Ilyas, Fajar, Indra, Tiara, Gebby or Ubai if this platform has bugs that annoy you so much that you have to contact them."/></Span></TextBlock>
+        <TextBlock x:Name="heading2" HorizontalAlignment="Left" Margin="55,67,680,613" TextWrapping="Wrap" Text="Reservation Detail" VerticalAlignment="Top" Foreground="#FF000050" Width="377" FontSize="30"/>
+        <Image Name="imageAsset" HorizontalAlignment="Left" Height="225" Margin="55,122,0,0" VerticalAlignment="Top" Width="245" Source="no-image.png" Stretch="Fill"/>
+        <TextBlock Name="assetName" Text="Asset name" HorizontalAlignment="Left" Margin="364,122,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="110" FontWeight="Bold" FontSize="20"/>
+        <TextBlock Name="reservee" Text="Reservee" HorizontalAlignment="Left" Height="24" Margin="364,151,0,0" VerticalAlignment="Top" Width="350" Foreground="#FF707070" FontSize="16"/>
+        <TextBlock Name="classroom" Text="Class" HorizontalAlignment="Left" Height="18" Margin="364,175,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="-3.364,-0.333" Foreground="#FF707070" FontSize="16"/>
+        <TextBlock x:Name="nrp" HorizontalAlignment="Left" Margin="364,203,0,0" VerticalAlignment="Top" Text="NRP" Foreground="#FF707070" FontSize="16"/>
+        <TextBlock Name="begin"  Text="Begin Date" HorizontalAlignment="Left" Margin="364,240,0,0" VerticalAlignment="Top" Height="20" Width="94" Foreground="#FF707070" FontSize="16"/>
+        <TextBlock Name="end" Text="Return Date" HorizontalAlignment="Left" Margin="364,265,0,0" VerticalAlignment="Top" Foreground="#FF707070" FontSize="16"/>
+        <TextBlock x:Name="statusUpdate" Text="Status Update" HorizontalAlignment="Left" Margin="364,309,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="170" FontWeight="Bold" FontSize="20"/>
+        <DataGrid Name="statusGrid" Margin="364,334,25,156" IsReadOnly="True" />
+        <Button x:Name="accept_button" Content="Finish" HorizontalAlignment="Left" Margin="1154,569,0,0" VerticalAlignment="Top" Width="100" Background="#FF000050" BorderBrush="#FF000050" Height="40" FontSize="18"/>
+        <Button x:Name="deny_button" Content="Reject" HorizontalAlignment="Left" Margin="1045,569,0,0" VerticalAlignment="Top" Width="100" BorderBrush="#FF707070" Background="#FF707070" Height="40" FontSize="18"/>
     </Grid>
 </basic:MyPage>
