--- a/Home/HomePage.xaml
+++ b/Home/HomePage.xaml
@@ -16,14 +16,8 @@
         <TextBlock x:Name="heading1" HorizontalAlignment="Left" Margin="55,30,0,0" TextWrapping="Wrap" Text="Hello," VerticalAlignment="Top" Foreground="#FF000050" FontWeight="Bold" FontSize="32"/>
         <TextBlock x:Name="heading2" HorizontalAlignment="Left" Margin="55,70,0,0" TextWrapping="Wrap" Text="Here are the reservation data recap for this month." VerticalAlignment="Top" Foreground="#FF000050" Width="377" FontSize="16"/>
         <Label Content="Waiting on Approval" HorizontalAlignment="Left" Margin="63,112,0,0" VerticalAlignment="Top" FontSize="14"/>
-        <Label Content="On Reservation" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="322,112,0,0" FontSize="14"/>
-        <Label Content="Returned" HorizontalAlignment="Left" Margin="589,112,0,0" VerticalAlignment="Top" FontSize="14"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="130" Margin="63,144,0,0" Stroke="Black" VerticalAlignment="Top" Width="134"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="130" Margin="322,144,0,0" Stroke="Black" VerticalAlignment="Top" Width="137"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="130" Margin="589,144,0,0" Stroke="Black" VerticalAlignment="Top" Width="134"/>
-        <Label x:Name="waiting_txtCount" Content="0" HorizontalAlignment="Left" Margin="119,190,0,0" VerticalAlignment="Top" Height="34" Width="21"/>
-        <Label x:Name="reserve_txtCount" Content="0" HorizontalAlignment="Left" Margin="380,190,0,0" VerticalAlignment="Top" Height="34" Width="22"/>
-        <Label x:Name="return_txtCount" Content="0" HorizontalAlignment="Left" Margin="647,190,0,0" VerticalAlignment="Top" Width="20" Height="34"/>
+        <Label Content="On Reservation" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="324,112,0,0" FontSize="14"/>
+        <Label Content="Returned" HorizontalAlignment="Left" Margin="593,112,0,0" VerticalAlignment="Top" FontSize="14"/>
         <TextBlock x:Name="reservation_txtBlock_Copy1" HorizontalAlignment="Left" Margin="55,300,0,0" TextWrapping="Wrap" Text="Recent reservations" VerticalAlignment="Top" Foreground="#FF000050" Width="377" FontSize="16"/>
         <ListView x:Name="recent_reservation_Lv" HorizontalAlignment="Left" Height="282" Margin="55,324,0,0" VerticalAlignment="Top" Width="934" MouseDoubleClick="recent_reservation_Lv_MouseDoubleClick">
             <ListView.View>
@@ -35,5 +29,14 @@
                 </GridView>
             </ListView.View>
         </ListView>
+        <Rectangle Fill="#FFDB0000" HorizontalAlignment="Left" Height="130" Stroke="Black" VerticalAlignment="Top" Width="267" Margin="65,144,0,0" RadiusY="18.5" RadiusX="18.5"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="130" Margin="96,144,0,0" Stroke="Black" VerticalAlignment="Top" Width="206"/>
+        <Label x:Name="waiting_txtCount" Content="0" HorizontalAlignment="Left" Margin="194,200,0,0" VerticalAlignment="Top" Height="34" Width="24" RenderTransformOrigin="0.167,0.794"/>
+        <Rectangle Fill="#FFEFB700" HorizontalAlignment="Left" Height="130" Stroke="Black" VerticalAlignment="Top" Width="272" Margin="384,144,0,0" RadiusY="18.5" RadiusX="18.5"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="130" Margin="416,144,0,0" Stroke="Black" VerticalAlignment="Top" Width="210"/>
+        <Label x:Name="reserve_txtCount" Content="0" HorizontalAlignment="Left" Margin="512,200,0,0" VerticalAlignment="Top" Height="34" Width="22"/>
+        <Rectangle Fill="#FF08F22D" HorizontalAlignment="Left" Height="130" Stroke="Black" VerticalAlignment="Top" Width="270" Margin="712,144,0,0" RadiusY="18.5" RadiusX="18.5"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="130" Margin="742,144,0,0" Stroke="Black" VerticalAlignment="Top" Width="210"/>
+        <Label x:Name="return_txtCount" Content="0" HorizontalAlignment="Left" Margin="844,200,0,0" VerticalAlignment="Top" Width="22" Height="34"/>
     </Grid>
 </basic:MyPage>
